# Roomove

./: .clang-tidy  .gitignore  CMakeLists.txt  RoomoveDSP.cpp  fix_irs.py  manual.yaml  next steps  phtwo.py  pluginProcessor.cpp  research.py  spectroTrain.py  subtractor_model_best.pth  synthesize_data.py  test_model.py  test_spec.py  test_specMore.py  ti_toolchain.cmake
.github/instructions/: .clinerules.md
.github/workflows/: build.yaml  mac-arm-standalone.yaml  manual.yaml  test-suite.yaml
.workflows/: build.yaml
Resources/: Roomove_PageTable.xml
app/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
build-dsp/: CMakeCache.txt  Makefile  cmake_install.cmake
build_standalone/: CMakeCache.txt  DartConfiguration.tcl
cmake/: VerifyAndInject.ps1
docs/: dsp-test-seams.md
dsp/: RoomoveDSP.cpp  RoomoveDSP.h
dtt/: generate_suites.rb
dtt/suites/: DSH_SigCancellation.yml  DSH_TI_CycleCounts.yml
scripts/: check_realtime_memory_hygiene.py  parse_ti_asm.py
tests/: DspSeamTests.cpp  ProcessorTests.cpp  RealtimeValidationTests.cpp
training/: feedback_cooker.py  paired_room.py  spectroTrainMore.py  test_model.py  test_spec.py  test_specMore.py  train.py
weights/: export_to_onnx.py  spec_subtractor.pth  subtractor.onnx  subtractor_onnx_visualized.mhtml
